# f5h

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.ja.md
src/: app.rs  config.rs  fs_utils.rs  keys.rs  main.rs  proc.rs  ui.rs
src/app/: ops.rs  tests.rs
src/ui/: dialogs.rs  proc_view.rs
