[package]
name = "f5h"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/mskako/f5h"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
